Footer alignment issue and portfolio link has added

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,11 +5,12 @@
 .hero-bg{
     /* background-image:linear-gradient(rgba(40, 187, 27, 0.4),rgba(187, 6, 6, 0.2)) ,url("/hero.png"); */
     background-image:linear-gradient(rgba(0, 0, 07, 0.8),rgba(0, 06, 06, 0.2)) ,url("/hero.png");
+    
 }
 
 .shimmer{
    
-    animation: shimmer 10s infinite linear ;
+    animation: shimmer 2s infinite linear ;
     background: linear-gradient(to right, #2c2c2c 4%,#333 25%,#2c2c2c 36% );
     background-size: 1000px  100%;
    
